// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render Switch checked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0:focus + label::before {
  box-shadow: 0px 0px 0px 4px rgba(60,100,244,0.2);
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

<input
  checked=""
  class="c0"
  data-testid="switch"
  id=":r0:"
  type="checkbox"
/>
`;

exports[`render Switch disabled checked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0:focus + label::before {
  box-shadow: 0px 0px 0px 4px rgba(60,100,244,0.2);
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

<input
  checked=""
  class="c0"
  data-testid="switch"
  disabled=""
  id=":r2:"
  type="checkbox"
/>
`;

exports[`render Switch disabled unchecked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0:focus + label::before {
  box-shadow: 0px 0px 0px 4px rgba(60,100,244,0.2);
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

<input
  class="c0"
  data-testid="switch"
  disabled=""
  id=":r3:"
  type="checkbox"
/>
`;

exports[`render Switch unchecked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0:focus + label::before {
  box-shadow: 0px 0px 0px 4px rgba(60,100,244,0.2);
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

<input
  class="c0"
  data-testid="switch"
  id=":r1:"
  type="checkbox"
/>
`;
